--- a/trunk/app/go2me/templates/user.html
+++ b/trunk/app/go2me/templates/user.html
@@ -15,7 +15,7 @@
 {% for comment in comments %}
 	<tr>
 		<td style="width:18px;"><span style="display:none;" class="Snap_Shot_URL">{{comment.map.url|escape}}</span></td>
-		<td>
+		<td class="title"><div>
 			<a href="/{{comment.map.GetId}}" title="{{comment.map.url|escape}}">{{comment.map.title|escape}}</a>
 		{% if comment.comment or comment.tags %}<div class="comments"><p>
 			{% ifequal comment.comment "__share" %}<i>Shared</i>{% else %}{{comment.comment|escape|urlize}}{% endifequal %}
@@ -25,7 +25,7 @@
 	    	- <i>{{ comment.dateCreated|Age }}</i>
 	    	</p></div>
 	    {% endif %}
-		</td>
+		</div></td>
 		<td class="num">{{comment.map.shareCount|intcomma}}</td>
 		<td class="num">{{comment.map.viewCount|intcomma}}</td>
 		<td class="num">{{comment.map.CommentCount|intcomma}}</td>
