--- a/trunk/app/go2me/templates/master.html
+++ b/trunk/app/go2me/templates/master.html
@@ -34,7 +34,8 @@ function Loaded() {}
 <a href="http://blog.go2.me">Blog</a> |
 <a href="http://code.google.com/p/g02me/wiki/API">Developers</a> |
 <a href="http://getsatisfaction.com/g02me/products/g02me_g02me">Feedback</a> |
-<a href="http://code.google.com/p/g02me/wiki/TermsOfService">Terms of Service</a>
+<a href="http://code.google.com/p/g02me/wiki/TermsOfService">Terms of Service</a> |
+<a href="http://twitter.com/go2me">Twitter</a>
 </div>
 
 <div style="text-align:center;padding-top:20px;">
