--- a/trunk/app/go2me/templates/profile.html
+++ b/trunk/app/go2me/templates/profile.html
@@ -10,13 +10,6 @@ var formProfile;
 
 function Loaded()
 {
-	txtUsername = document.getElementById("username")
-	if (txtUsername)
-		Go2.AddEventFn(txtUsername, "keydown", KeyDownUsername);
-
-	txtComment = document.getElementById("comment");
-	txtComment.focus();
-	Go2.AddEventFn(txtComment, "keydown", KeyDownComment);
 }
 
 function Click()
@@ -24,29 +17,6 @@ function Click()
 	// Call the Click function in our parent window in case we're in a Frame
 	if (window.parent && window.parent.Go2MeParentClick != undefined)
 		window.parent.Go2MeParentClick();
-}
-
-function PostComment()
-{
-	Go2.PostComment("{{map.GetId}}", txtUsername ? txtUsername.value : '', txtComment.value);
-}
-
-function KeyDownUsername(evt)
-{
-	if (evt.keyCode == 13)
-		{
-		txtComment.focus();
-		evt.preventDefault();
-		}
-}	
-
-function KeyDownComment(evt)
-{
-	if (evt.keyCode == 13)
-		{
-		PostComment();
-		evt.preventDefault();
-		}
 }
 
 window.onclick = Click;
@@ -70,21 +40,21 @@ window.onclick = Click;
 	<tr>
 		<th><label for="username">Nickname:</label></th>
 		<td>
-		{% if not profile.username %}
+		{% if not profileForm.username %}
 			<input type="text" id="username" name="username" value=""/>
 		{% else %}
-			{{ profile.username }}
+			{{ profileForm.username }}
 		{% endif %}
 		</td>
 	</tr>
-	<tr><th><label for="loc">Location:</label></th>
-		<td><input type="text" id="loc" name="loc" value="{{profile.sLocation|escape}}"/></td></tr>
-	<tr><th><label for="birth">Birthdate:</label></th>
-		<td><input type="text" id="birth" name="birth" value="{{profile.dateBirth|date:"n/j/Y"}}"/></td></tr>
-	<tr><th><label for="home">Home Page:</label></th>
-		<td><input type="text" id="home" name="home" value="{{profile.urlHome|escape}}"/></td></tr>
-	<tr><th><label for="about">Home Page:</label></th>
-		<td><textarea id="about" name="about" value="{{profile.sAbout|escape}}"></textarea></td></tr>
+	<tr><th><label for="sLocation">Location:</label></th>
+		<td><input type="text" id="sLocation" name="sLocation" value="{{profileForm.sLocation|escape}}"/></td></tr>
+	<tr><th><label for="dateBirth">Birthdate:</label></th>
+		<td><input type="text" id="dateBirth" name="dateBirth" value="{{profileForm.dateBirth|date:"n/j/Y"}}"/></td></tr>
+	<tr><th><label for="urlHome">Home Page:</label></th>
+		<td><input type="text" id="urlHome" name="urlHome" value="{{profileForm.urlHome|escape}}"/></td></tr>
+	<tr><th><label for="sAbout">About me:</label></th>
+		<td><textarea id="sAbout" name="sAbout">{{profileForm.sAbout|escape}}</textarea></td></tr>
 
 	<tr><th></th><td><input type="submit" value="Save"/></td></tr>
 </table>
