--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -220,12 +220,41 @@ white-space: nowrap;
 
 th {
 text-align: right;
+vertical-align: top;
+padding-top: 5px;
 }
 
 table.scores td.bar {
 vertical-align: middle;
 padding-left: 5px;
 width: 200px;
+}
+
+table.form td
+{
+padding-bottom: 10px;
+width: 400px;
+}
+
+table.form input[type=text] {
+width: 150px;
+}
+
+table.form td p.static {
+margin-top: 2px;
+}
+
+table.form input.full {
+width: 380px
+}
+
+table.form textarea {
+width: 380px;
+height: 50px;
+}
+
+table.form input[type=submit] {
+width: 70px;
 }
 
 div.bar {
