--- a/app/go2me/templates/pages.html
+++ b/app/go2me/templates/pages.html
@@ -32,7 +32,7 @@ function KeyDown(evt)
 	{% if profile %}
 		(<a href="/profile" title="{{username}}'s profile">Profile</a>)
 	{% else %}
-		(<a href="/cmd/login" title="You nickname is temporary until you create a (free) account.">Create Account</a>)
+		(<a href="/profile" title="You nickname is temporary until you create a (free) account.">Create Account</a>)
 	{% endif %} |
 	<a href="javascript:Go2.SetUsername('');">Sign out</a>
 {% else %}
