--- a/trunk/app/go2me/templates/profile.html
+++ b/trunk/app/go2me/templates/profile.html
@@ -33,6 +33,7 @@ window.onclick = Click;
 <div class="page">
 <div class="head">
 	<a target="_top" href="/" title="{{site_name}} Home | Popular Pages"><img class="logo" src="/images/logo.png"></a>
+	<a href="/user/{{profileForm.username}}/picture_full"><img class="profile" src="/user/{{profileForm.username}}/picture_med"></a>
 	<h1 style="padding-top: 40px;">{{username}}'s profile</h1>
 	<div style='clear:both;'></div>
 </div>
@@ -45,7 +46,7 @@ window.onclick = Click;
 <p class="error">{{message}}.</p>
 {% endif %}
 
-<form action="/profile" method="POST">
+<form enctype="multipart/form-data" action="/profile" method="POST">
 <input type="hidden" name="csrf" value="{{csrf}}"/>
 <table class="form">
 	<tr>
@@ -62,7 +63,10 @@ window.onclick = Click;
 		<td><input type="text" id="sFullname" name="sFullname" value="{{profileForm.sFullname|escape}}"/>
 		    <p class="help">What's your real name?</p></td></tr>
 	<tr><th><label for="img">Profile picture:</label></th>
-		<td><input type="file" id="img" name="img" size="40"/></td></tr>	
+		<td><input type="file" size="40" id="img" name="img" accept="image"/>
+			<br/><img class="profile" src="/user/{{profileForm.username}}/picture_med">
+			<p class="help">Upload an image file (PNG, JPG, or GIF) to change your profile picture.</p>
+		</td></tr>	
 	<tr><th><label for="sLocation">Location:</label></th>
 		<td><input type="text" id="sLocation" name="sLocation" value="{{profileForm.sLocation|escape}}"/>
 		    <p class="help">Where are you?</p></td></tr>
@@ -82,5 +86,4 @@ window.onclick = Click;
 </table>
 </form>
 
-Picture: <img src="/user/{{profileForm.username}}/picture_full">
 {% endblock %}
