Profile and user activity pages show profile info

--- a/app/go2me/templates/user.html
+++ b/app/go2me/templates/user.html
@@ -6,9 +6,19 @@
 <div class="page">
 <div class="head">
 	<a target="_top" href="/" title="{{site_name}} Home | Popular Pages"><img class="logo" src="/images/logo.png"></a>
+	<a href="/user/{{usernamePage}}/picture_full"><img class="profile" src="/user/{{usernamePage}}/picture_med"></a>
 	<h1 style="padding-top: 40px;">{{usernamePage}}'s activity</h1>
 	<div style='clear:both;'></div>
 </div>
+
+{% if profilePage %}
+<div class="about">
+	{% if profilePage.sFullname %}
+		<b>About {{profilePage.sFullname|escape}}</b>:
+	{% endif %}
+	{{profilePage.sAbout|escape|urlize}}
+</div>
+{% endif %}
 
 <table class="scores">
 <tr><th></th><th>Title</th><th>Shared</th><th>Viewed</th><th>Comments</th><th>Created</th><th>Scores</th></tr>
