--- a/app/go2me/templates/profile.html
+++ b/app/go2me/templates/profile.html
@@ -40,7 +40,7 @@ window.onclick = Click;
 
 <script>
 	if (location.hash == "#saved")
-		document.write('<p style="text-align:center;" class="help">Profile Saved. Return to <a href="/">Home</a></p>');
+		document.write('<p class="message">Profile Saved. Return to <a href="/">Home</a></p>');
 </script>
 {% if message %}
 <p class="error">{{message}}.</p>
