Fix ?comment redirect to remove param on comment post

--- a/app/go2me/templates/head.html
+++ b/app/go2me/templates/head.html
@@ -17,7 +17,7 @@ function Loaded()
 		Go2.AddEventFn(txtUsername, "keydown", KeyDownUsername);
 
 	txtComment = document.getElementById("comment");
-	var objParams = Go2.ParseParams(window.parent.location.href);
+	var objParams = Go2.ParseParams(window.location.href);
 	if (objParams.comment)
 		txtComment.value = objParams.comment;
 	txtComment.focus();
