--- a/app/go2me/templates/pages.html
+++ b/app/go2me/templates/pages.html
@@ -1,5 +1,15 @@
 {% extends "master.html" %}
 
+{% block script_includes %}
+<script type="text/javascript" src="http://shots.snap.com/ss/{{snapshots_code}}/snap_shots.js"></script>
+
+<!-- ClickTale Top part -->
+<script type="text/javascript">
+var WRInitTime=(new Date()).getTime();
+</script>
+<!-- ClickTale end of Top part -->
+{% endblock %}
+
 {% block script %}
 Go2.SetCSRF("{{csrf}}");
 
@@ -50,4 +60,14 @@ function KeyDown(evt)
 <div class="timer"><span>Elapsed time: {{elapsed}}s</span></div>
 
 </div>
+{% endblock %}
+
+{% block page_end %}
+<!-- ClickTale Bottom part -->
+<div id="ClickTaleDiv" style="display: none;"></div>
+<script src="http://s.clicktale.net/WRb.js" type="text/javascript"></script>
+<script type="text/javascript">
+if(typeof ClickTale=='function') ClickTale(24739,0.225);
+</script>
+<!-- ClickTale end of Bottom part -->
 {% endblock %}
