--- a/app/go2me/templates/pages.html
+++ b/app/go2me/templates/pages.html
@@ -2,12 +2,6 @@
 
 {% block script_includes %}
 <script type="text/javascript" src="http://shots.snap.com/ss/{{snapshots_code}}/snap_shots.js"></script>
-
-<!-- ClickTale Top part -->
-<script type="text/javascript">
-var WRInitTime=(new Date()).getTime();
-</script>
-<!-- ClickTale end of Top part -->
 {% endblock %}
 
 {% block script %}
@@ -59,15 +53,23 @@ function KeyDown(evt)
 
 <div class="timer"><span>Elapsed time: {{elapsed}}s</span></div>
 
+</div> <!-- page -->
+{% endblock %}
+
+{% block footer %}
+<div class="bottom">
+<a href="http://code.google.com/p/g02me/wiki/AboutUs">About Us</a> |
+<a href="http://blog.go2.me">Blog</a> |
+<a href="http://code.google.com/p/g02me/wiki/API">Developers</a> |
+<a href="http://getsatisfaction.com/g02me/products/g02me_g02me">Feedback</a> |
+<a href="http://code.google.com/p/g02me/wiki/TermsOfService">Terms of Service</a> |
+<a href="http://twitter.com/go2me">Twitter</a>
+</div>
+
+<div style="text-align:center;padding-top:20px;">
+<a href="http://code.google.com/p/g02me/">
+	<img src="http://code.google.com/appengine/images/appengine-silver-120x30.gif" alt="Powered by Google App Engine" />
+</a>
 </div>
 {% endblock %}
 
-{% block page_end %}
-<!-- ClickTale Bottom part -->
-<div id="ClickTaleDiv" style="display: none;"></div>
-<script src="http://s.clicktale.net/WRb.js" type="text/javascript"></script>
-<script type="text/javascript">
-if(typeof ClickTale=='function') ClickTale(24739,0.225);
-</script>
-<!-- ClickTale end of Bottom part -->
-{% endblock %}
